# chess-transformer

./: .gitignore  pyproject.toml  ruff.toml
assets/: gen.py
chess/data/: parse.py
chess/engine/: parse.py  piece.py  state.py  utils.py
chessformer/: dataloader.py  logging.py  utils.py
chessformer/model/: __init__.py  chessformer.py  mlp.py
chessgpt/: constants.py
chessgpt/data/: __init__.py  dataset.py  parse.py  vocab.py
chessgpt/engine/: piece.py  state.py
chessgpt/models/: __init__.py  bigram.py
scripts/: pretrain.py  train_small.py
tests/engine/: test_engine.py  test_utils.py
