[project]
name = "chessformer"
version = "0.1.0"
description = ""
authors = [{name = "Risitop"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "ruff (>=0.9.5,<0.10.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "python-chess (>=1.999,<2.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
